Fix font color application on Firefox

--- a/app/javascript/styles/mastodon-light/diff.scss
+++ b/app/javascript/styles/mastodon-light/diff.scss
@@ -477,11 +477,7 @@ html {
   color: $white;
 }
 
-.compose-form,
-.spoiler-input__input,
-.search__input,
-.search__popout,
-.emoji-mart-search__input {
+.compose-form .spoiler-input__input {
   color: lighten($ui-highlight-color, 8%);
 }
 
